# quick-rag

./: .env.example  .gitignore  README.md  pyproject.toml
quick_rag/: __init__.py  rag.py
